log.txt
            ^
C:\Users\lyanh\Documents\BBS-XYZ NEW\BBS-Xyz\cml_fork\src\client\java\mchorse\bbs_mod\forms\FormUtilsClient.java:88: error: cannot find symbol
        register(FluidForm.class, FluidFormRenderer::new);
                 ^
  symbol:   class FluidForm
  location: class FormUtilsClient
C:\Users\lyanh\Documents\BBS-XYZ NEW\BBS-Xyz\cml_fork\src\client\java\mchorse\bbs_mod\forms\renderers\FluidFormRenderer.java:38: error: cannot find symbol
        MatrixStackUtils.multiply(stack, uiMatrix);
        ^
  symbol:   variable MatrixStackUtils
  location: class FluidFormRenderer
C:\Users\lyanh\Documents\BBS-XYZ NEW\BBS-Xyz\cml_fork\src\client\java\mchorse\bbs_mod\simulation\FluidInteractionTest.java:32: error: cannot find symbol
            fluid.addForce(16, 16, (float) Math.sqrt(dx * dx + dz * dz) * 5.0F);
                 ^
  symbol:   method addForce(int,int,float)
  location: variable fluid of type FluidSimulation
C:\Users\lyanh\Documents\BBS-XYZ NEW\BBS-Xyz\cml_fork\src\client\java\mchorse\bbs_mod\simulation\FluidInteractionTest.java:39: error: cannot find symbol
        float height = fluid.getHeight(16, 16);
                            ^
  symbol:   method getHeight(int,int)
  location: variable fluid of type FluidSimulation
C:\Users\lyanh\Documents\BBS-XYZ NEW\BBS-Xyz\cml_fork\src\client\java\mchorse\bbs_mod\simulation\FluidInteractionTest.java:52: error: cannot find symbol
        fluidHighViscosity.viscosity = 0.99F;
                          ^
  symbol:   variable viscosity
  location: variable fluidHighViscosity of type FluidSimulation
C:\Users\lyanh\Documents\BBS-XYZ NEW\BBS-Xyz\cml_fork\src\client\java\mchorse\bbs_mod\simulation\FluidInteractionTest.java:55: error: cannot find symbol
        fluidLowViscosity.viscosity = 0.5F;
                         ^
  symbol:   variable viscosity
  location: variable fluidLowViscosity of type FluidSimulation
C:\Users\lyanh\Documents\BBS-XYZ NEW\BBS-Xyz\cml_fork\src\client\java\mchorse\bbs_mod\simulation\FluidInteractionTest.java:58: error: cannot find symbol
        fluidHighViscosity.addForce(16, 16, 10.0F);
                          ^
  symbol:   method addForce(int,int,float)
  location: variable fluidHighViscosity of type FluidSimulation
C:\Users\lyanh\Documents\BBS-XYZ NEW\BBS-Xyz\cml_fork\src\client\java\mchorse\bbs_mod\simulation\FluidInteractionTest.java:59: error: cannot find symbol
        fluidLowViscosity.addForce(16, 16, 10.0F);
                         ^
  symbol:   method addForce(int,int,float)
  location: variable fluidLowViscosity of type FluidSimulation
C:\Users\lyanh\Documents\BBS-XYZ NEW\BBS-Xyz\cml_fork\src\client\java\mchorse\bbs_mod\simulation\FluidInteractionTest.java:68: error: cannot find symbol
        float h1 = Math.abs(fluidHighViscosity.getHeight(16, 16));
                                              ^
  symbol:   method getHeight(int,int)
  location: variable fluidHighViscosity of type FluidSimulation
C:\Users\lyanh\Documents\BBS-XYZ NEW\BBS-Xyz\cml_fork\src\client\java\mchorse\bbs_mod\simulation\FluidInteractionTest.java:69: error: cannot find symbol
        float h2 = Math.abs(fluidLowViscosity.getHeight(16, 16));
                                             ^
  symbol:   method getHeight(int,int)
  location: variable fluidLowViscosity of type FluidSimulation
C:\Users\lyanh\Documents\BBS-XYZ NEW\BBS-Xyz\cml_fork\src\client\java\mchorse\bbs_mod\simulation\FluidInteractionTest.java:86: error: cannot find symbol
        fluidNormal.sensitivity = 1.0F;
                   ^
  symbol:   variable sensitivity
  location: variable fluidNormal of type FluidSimulation
C:\Users\lyanh\Documents\BBS-XYZ NEW\BBS-Xyz\cml_fork\src\client\java\mchorse\bbs_mod\simulation\FluidInteractionTest.java:89: error: cannot find symbol
        fluidSensitive.sensitivity = 2.0F;
                      ^
  symbol:   variable sensitivity
  location: variable fluidSensitive of type FluidSimulation
C:\Users\lyanh\Documents\BBS-XYZ NEW\BBS-Xyz\cml_fork\src\client\java\mchorse\bbs_mod\simulation\FluidInteractionTest.java:92: error: cannot find symbol
        fluidNormal.addForce(16, 16, force);
                   ^
  symbol:   method addForce(int,int,float)
  location: variable fluidNormal of type FluidSimulation
C:\Users\lyanh\Documents\BBS-XYZ NEW\BBS-Xyz\cml_fork\src\client\java\mchorse\bbs_mod\simulation\FluidInteractionTest.java:93: error: cannot find symbol
        fluidSensitive.addForce(16, 16, force);
                      ^
  symbol:   method addForce(int,int,float)
  location: variable fluidSensitive of type FluidSimulation
C:\Users\lyanh\Documents\BBS-XYZ NEW\BBS-Xyz\cml_fork\src\client\java\mchorse\bbs_mod\simulation\FluidInteractionTest.java:98: error: cannot find symbol
        float h1 = fluidNormal.getHeight(16, 16);
                              ^
  symbol:   method getHeight(int,int)
  location: variable fluidNormal of type FluidSimulation
C:\Users\lyanh\Documents\BBS-XYZ NEW\BBS-Xyz\cml_fork\src\client\java\mchorse\bbs_mod\simulation\FluidInteractionTest.java:99: error: cannot find symbol
        float h2 = fluidSensitive.getHeight(16, 16);
                                 ^
  symbol:   method getHeight(int,int)
  location: variable fluidSensitive of type FluidSimulation
C:\Users\lyanh\Documents\BBS-XYZ NEW\BBS-Xyz\cml_fork\src\client\java\mchorse\bbs_mod\simulation\FluidSimulationTest.java:16: error: cannot find symbol
        if (fluid.getWidth() != 10 || fluid.getHeight() != 10)
                 ^
  symbol:   method getWidth()
  location: variable fluid of type FluidSimulation
C:\Users\lyanh\Documents\BBS-XYZ NEW\BBS-Xyz\cml_fork\src\client\java\mchorse\bbs_mod\simulation\FluidSimulationTest.java:16: error: cannot find symbol
        if (fluid.getWidth() != 10 || fluid.getHeight() != 10)
                                           ^
  symbol:   method getHeight()
  location: variable fluid of type FluidSimulation
C:\Users\lyanh\Documents\BBS-XYZ NEW\BBS-Xyz\cml_fork\src\client\java\mchorse\bbs_mod\simulation\FluidSimulationTest.java:26: error: cannot find symbol
        fluid.addForce(5, 5, 10.0f);
             ^
  symbol:   method addForce(int,int,float)
  location: variable fluid of type FluidSimulation
C:\Users\lyanh\Documents\BBS-XYZ NEW\BBS-Xyz\cml_fork\src\client\java\mchorse\bbs_mod\simulation\FluidSimulationTest.java:36: error: cannot find symbol
        float height = fluid.getHeight(5, 5);
                            ^
  symbol:   method getHeight(int,int)
  location: variable fluid of type FluidSimulation
C:\Users\lyanh\Documents\BBS-XYZ NEW\BBS-Xyz\cml_fork\src\client\java\mchorse\bbs_mod\simulation\FluidSimulationTest.java:47: error: cannot find symbol
        fluid.sensitivity = 2.0f;
             ^
  symbol:   variable sensitivity
  location: variable fluid of type FluidSimulation
C:\Users\lyanh\Documents\BBS-XYZ NEW\BBS-Xyz\cml_fork\src\client\java\mchorse\bbs_mod\simulation\FluidSimulationTest.java:48: error: cannot find symbol
        fluid.addForce(5, 5, 1.0f);
             ^
  symbol:   method addForce(int,int,float)
  location: variable fluid of type FluidSimulation
C:\Users\lyanh\Documents\BBS-XYZ NEW\BBS-Xyz\cml_fork\src\client\java\mchorse\bbs_mod\simulation\FluidSimulationTest.java:78: error: cannot find symbol
        if (fluid.getHeight(4, 5) == 0 && fluid.getHeight(6, 5) == 0)
                 ^
  symbol:   method getHeight(int,int)
  location: variable fluid of type FluidSimulation
C:\Users\lyanh\Documents\BBS-XYZ NEW\BBS-Xyz\cml_fork\src\client\java\mchorse\bbs_mod\simulation\FluidSimulationTest.java:78: error: cannot find symbol
        if (fluid.getHeight(4, 5) == 0 && fluid.getHeight(6, 5) == 0)
                                               ^
  symbol:   method getHeight(int,int)
  location: variable fluid of type FluidSimulation
C:\Users\lyanh\Documents\BBS-XYZ NEW\BBS-Xyz\cml_fork\src\client\java\mchorse\bbs_mod\simulation\FluidSimulationTest.java:108: error: cannot find symbol
        if (fluid.getHeight(4, 5) == 0)
                 ^
  symbol:   method getHeight(int,int)
  location: variable fluid of type FluidSimulation
C:\Users\lyanh\Documents\BBS-XYZ NEW\BBS-Xyz\cml_fork\src\client\java\mchorse\bbs_mod\ui\forms\editors\forms\UIFluidForm.java:19: error: cannot find symbol
        this.registerPanel(this.defaultPanel, UIKeys.FORMS_EDITORS_MODEL_TITLE, Icons.MATERIAL);
                                                    ^
  symbol:   variable FORMS_EDITORS_MODEL_TITLE
  location: class UIKeys
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
26 errors
4 warnings

> Task :compileClientJava FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileClientJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 30s